# BhuMe

./: .env.example  .gitignore  README.md  conftest.py  predict.py  pyproject.toml
backend/: main.py
backend/core/: config.py
backend/routes/: explain.py  predictions.py  villages.py
data/: README.md
data/12429_malatavadi_chandgad_kolhapur/: predictions.geojson
data/34855_vadnerbhairav_chandavad_nashik/: predictions.geojson
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/PlotPanel/: PlotPanel.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Home.tsx  MapView.tsx
solution/: __init__.py  ai_explain.py  align.py  calibrate.py  gemini_vision.py  ml_align.py  pipeline.py  types.py
tests/: test_align.py  test_calibrate.py  test_pipeline.py
transcripts/: README.md  chat_transcript.md  development_transcript.md
