[project]
name = "bhume-boundary-correction"
version = "0.1.0"
description = "Boundary correction pipeline for Maharashtra cadastral plots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # geo / ML core
    "geopandas>=1.0",
    "rasterio>=1.3",
    "shapely>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pillow>=10.0",
    "pyproj>=3.6",
    # AI integrations (free-tier)
    "google-generativeai>=0.8",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    # backend
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    # dev / test
    "pytest>=8.0",
    "httpx>=0.27",       # for FastAPI TestClient
    "google-genai>=2.10.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
